compiler/testData/cli/jvm/kmpMissingActual.common.kt
interface Base1

expect interface Foo : Base1
expect interface Base2
expect interface Foo2 : Base2

interface Case2ImplKotlin: Base2